# estuaire

./: .gitignore  Dockerfile  Makefile  README.rst  data.py.rej  eikonal.vimproject  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml
eikonal/core/: frechet.py
patches/: 0002-BUG-FIX-EikonalDataType-type-array-failure.patch
scripts/: data.py  txtimportsql.py  txtimportsql_jp.py
src/agstd/: pyproject.toml
src/agstd/agstd/: main.py  persistance.py  sqldbase.py~  tools.py
src/agstd/agstd/refraction/: txtbase2.py
src/agstd/agstd/sdb/: dbase.py  dbase.py~
src/agstd/agstd/vis/: pipeline.py
src/eikonal-ng/: Makefile  README.rst  pyproject.toml  setup.py
src/eikonal-ng/build_old/: raytrace.cpp  raytrace.pyx  solver.cpp  solver.pyx
src/eikonal-ng/eikonal/: __init__.py  cllinear.py  data.py  data.py~  frechet.py  geikonal.py  linear.py
src/eikonal-ng/templates/: raytrace.pyx.mako  solver.pyx.mako
src/eikonal-ng/test/: spmv.py
src/eikonal-ng/tests/: validate_eikonal_frechet.py  validate_sparse_sensitivity.py
src/estuaire/site_scons/: #slopes.py#  slopes.py
src2/agstd/agstd/: main.py
src2/eikonal-ng/: eikonal.vimproject
src2/eikonal-ng/eikonal/: data.py  geikonal.py  linear.py
src2/eikonal-ng/templates/: raytrace.pyx.mako
src2/estuaire/: README_SCONS_2.rst  estuaire.vimproject
src2/estuaire/doc/: Makefile  conf.py
src2/estuaire/site_scons/: escripts.py  (+1 more)
templates/: raytrace.pyx.mako  solver.hpp.mako  solver.pyx.mako
tests/: test_sparse_sensitivity.py  validate_eikonal_frechet.py  validate_sparse_sensitivity.py
(+74 files in other folders)
