[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agstd"
version = "0.1.0"
description = "Ancillary geophysical tools shared with Estuary."
requires-python = ">=3.10"
readme = "README"
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
include = ["agstd*"]
